--- a/src/rocketchat-dark.scss
+++ b/src/rocketchat-dark.scss
@@ -782,7 +782,7 @@ body.dark-mode {
     }
 
     a {
-      --link-font-color: #{$primary-color};
+      color: $primary-color;
     }
 
     .title {
