--- a/src/rocketchat-dark.scss
+++ b/src/rocketchat-dark.scss
@@ -558,6 +558,15 @@ body.dark-mode {
     box-shadow: 0px 0px 2px var(--color-dark-20);
   }
 
+  .emoji {
+    &.big {
+      height: 8rem;
+      max-height: 8rem;
+      max-width: 8rem;
+      width: 8rem;
+    }
+  }
+
   .emoji-picker {
     .filter-list {
       padding: 0;
@@ -935,23 +944,21 @@ body.dark-mode {
   }
 
   //- Footer
-  .footer {
-    .rc-message-box__container {
-      background: transparent;
-      border-color: $border-color;
-    }
+  .rc-message-box__container {
+    background: transparent;
+    border-color: $border-color;
+  }
 
-    .rc-message-box__textarea {
-      color: $light-color-dark;
+  .rc-message-box__textarea {
+    color: $light-color-dark;
 
-      &::placeholder {
-        color: $gray-color-darkest;
-      }
+    &::placeholder {
+      color: $gray-color-darkest;
     }
+  }
 
-    .rc-message-box .reply-preview {
-      background: $dark-color;
-    }
+  .rc-message-box .reply-preview {
+    background: $dark-color;
   }
 
   //- Admin 
@@ -1156,6 +1163,7 @@ body.dark-mode {
   //- Buttons
   .rcx-css-136xdpx {
     background: var(--color-dark);
+    border-bottom-color: #23272c !important;
   }
   
   .rcx-button {
@@ -1224,30 +1232,29 @@ body.dark-mode {
     background-color: $dark-color !important;
   }
 
-  .rcx-options {
-    & > .rcx-tile {
-      background: $dark-color !important;
-    }
+  .rcx-tile {
+    background: $dark-color !important;
+  }
+  
+  .rcx-option {
+    background: $dark-color !important;
+    color: $gray-color-light !important;
 
-    .rcx-option {
-      background: $dark-color !important;
-      color: $gray-color-light !important;
-
-      &:hover {
-        background: $dark-color-light !important;
-      }
-    }
-
-    .rcx-option--focus,
-    .rcx-option--selected {
+    &:hover {
       background: $dark-color-light !important;
     }
+  }
+
+  .rcx-option--focus,
+  .rcx-option--selected {
+    background: $dark-color-light !important;
   }
 
   .rc-popover__content {
     .rc-popover__item {
       &:focus,
       &:hover {
+        background: #1e2227 !important;
         color: $gray-color-light;
       }
     }
@@ -1258,6 +1265,14 @@ body.dark-mode {
 
     .rcx-option:hover {
       background: $dark-color-light !important;
+    }
+  }
+
+  .rcx-table__row--action {
+    &:focus,
+    &:hover {
+      background: #1e2227 !important;
+      color: $gray-color-light;
     }
   }
 
