--- a/src/rocketchat-dark.scss
+++ b/src/rocketchat-dark.scss
@@ -342,6 +342,10 @@ textarea {
     }
   }
 }
+.rcx-sidebar-item--selected,
+.rcx-sidebar-item:active {
+  background-color: var(--rcx-sidebar-color-surface-hover,var(--rcx-color-surface-hover,var(--rcx-color-neutral-200,#f2f3f5))) !important;
+}
 
 //- Dark Mode Variables
 body.dark-mode {
@@ -667,6 +671,11 @@ body.dark-mode {
   //- Main
   .rcx-css-1lrqran {
     background-color: $dark-color !important;
+  }
+
+  .rcx-sidebar-item--selected,
+  .rcx-sidebar-item:active {
+    background-color: #1e2227!important;
   }
 
   .main-content {
