--- a/src/rocketchat-dark.scss
+++ b/src/rocketchat-dark.scss
@@ -344,7 +344,7 @@ textarea {
 }
 .rcx-sidebar-item--selected,
 .rcx-sidebar-item:active {
-  background-color: var(--rcx-sidebar-color-surface-hover,var(--rcx-color-surface-hover,var(--rcx-color-neutral-200,#f2f3f5))) !important;
+  background-color: darken(#2f343d, 5%) !important;
 }
 
 //- Dark Mode Variables
